feat: mocked search results

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -40,7 +40,7 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #575dca;
 }
 button:focus,
 button:focus-visible {
