--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -3,7 +3,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #1d2638;
   min-height: 8vh;
   display: flex;
   flex-direction: column;
