--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -11,11 +11,14 @@
 
 .repl-history {
   height: 55vh;
-  margin: auto;
+  margin-left: auto;
+  margin-right: auto;
   display: block;
   overflow: scroll;
 }
-
+table {
+  border: 1px solid black;
+}
 .repl-input {
   margin: auto;
   height: 10vh;
