--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -10,13 +10,17 @@
 }
 
 .repl-history {
-  height: 55vh;
-  margin-left: auto;
-  margin-right: auto;
+  margin: auto;
   display: block;
+  height: 55vh;
   overflow: scroll;
 }
+.history-table {
+  margin-bottom: 1em;
+}
+
 table {
+  margin: auto;
   border: 1px solid black;
 }
 td {
